<resources>
    <string name="app_name">calculator</string>
    <string name="sttitle">Student Marks Calculation System</string>
    <string name="stname">Student name</string>

    <string name="marks1">Marks 1</string>
    <string name="marks2">Marks 2</string>
    <string name="marks3">Marks 3</string>
    <string name="total">Total</string>
    <string name="avg">Avg</string>
    <string name="grade">Grade</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
</resources>