<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/sttitle"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:src="@drawable/download"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@string/stname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stname"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/stname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@string/stname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marks1"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/marks1"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@string/stname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marks2"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/marks2"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@string/stname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marks3"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/marks3"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@string/stname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@string/stname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/avg"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@string/stname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/grade"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn1"
                android:text="@string/ok"
                android:background="@color/cardview_dark_background"
                android:textColor="@color/white"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2"
                android:text="@string/clear"
                android:background="@color/cardview_dark_background"
                android:textColor="@color/white"
                />
            
            
            
        </LinearLayout>







    </LinearLayout>



</LinearLayout>